<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IRMA (pilot) Management</string>
    <string name="title_credential_detail">Credential Detail</string>
    <string name="title_log">Log</string>
    <string name="title_settings">Settings</string>
    <string name="irmalogo">IRMA Logo</string>
    <string name="irmashape">GUI artifact</string>
    <string name="issuerlogo">Issuer Logo</string>
    <string name="verifierlogo">Verifier Logo</string>
    <string name="actorlogo">Actor Logo</string>
    <string name="actionimage">Action Image</string>
    <string name="pinrequired">Pin required:</string>
    <string name="validtill">Valid until:</string>
    <string name="issuer">Issuer</string>
    <string name="credentialdescription">Credential Description</string>
    <string name="deletetext">Delete</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_waiting_for_card">Waiting For Card</string>
    <string name="status_waiting_for_card">Waiting for card</string>
    <string name="status_waiting_for_pin">Waiting for PIN</string>
    <string name="status_error">An error occurred</string>
    <string name="status_loading_credentials">Loading credentials&#8230;</string>
    <string name="credential_no_longer_valid">No longer valid</string>
    <string name="pinmessage">Please enter maintenance PIN</string>

    <string name="pinhint">Maintenance PIN</string>
    <string name="old_pin_hint">Old PIN</string>
    <string name="new_pin_hint">New PIN</string>

    <string name="old_pin_message">Enter Old PIN:</string>
    <string name="new_pin_message">Enter New PIN:</string>
    <string name="new_pin_again_message">Retype New PIN:</string>

    <string name="pins_unequal">New PINs do not match. Please try again.</string>
    <string name="pin_length_wrong">New PIN must be %1$d digits long. Please try again.</string>

    <string name="change_pin_tries">Pin Incorrect! You have %1$d tries left.</string>

    <string name="log_button_text">Logs</string>
    <string name="settings_button_text">Settings</string>
    <string name="menu_heading_credentials">Credentials on card:</string>
    <string name="no_logs_available">no log items found</string>
    <string name="error_logs_not_read">log could not be read</string>
    <string name="no_credentials_available">no credentials found</string>
    <string name="init_text">Please select a credential on the left, go to your Logs, or modify the Settings on your card.</string>
    <string name="card_pin_heading">Maintenance Pin</string>
    <string name="card_pin_text">You need your maintenance PIN to manage your card. It enables you to view your credentials and logs using this application.</string>
    <string name="credential_pin_heading">Credential Pin</string>
    <string name="credential_pin_text">You need your credential PIN in order to use certain credentials on your card.</string>
    <string name="change_pin">Change PIN</string>
    <string name="card_version_heading">Card Version</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logs">Logs</string>
</resources>
