<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >
    
    <TextView 
        android:id="@+id/changepin_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/irmared"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:textIsSelectable="true"
        android:text="@string/pins_unequal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/oldpinmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pin_message"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/old_pincode"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/old_pin_hint" />
    
        <TextView
        android:id="@+id/new_pin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pin_message"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp" 
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/new_pin_code"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/new_pin_hint" />
    
    <TextView
        android:id="@+id/new_pin_again_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pin_again_message"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_pin_code_again"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/new_pin_hint" />

</LinearLayout>