<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/settings_mainshape"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/irmashape"
        android:src="@drawable/whiteshaperounded" />

    <RelativeLayout
        android:id="@+id/settings_something"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="30dp"
        android:orientation="vertical"
        tools:context=".CredentialDetailFragment" >
        
        <!-- Card Pin -->

        <TextView
            android:id="@+id/settings_card_pin_heading"
            style="@style/DetailHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/card_pin_heading"
            android:textIsSelectable="true" />
        
        <TextView
            android:id="@+id/settings_card_pin_text"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_card_pin_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/card_pin_text" />
        
        <Button 
            android:id="@+id/settings_change_card_pin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_card_pin_text"
            android:text="@string/change_pin"/>
        
        <!-- Card Pin Text -->

        <TextView
            android:id="@+id/settings_cred_pin_heading"
            style="@style/DetailHeading"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_change_card_pin_button"
            android:text="@string/credential_pin_heading"
            android:textIsSelectable="true" />
        
        <TextView
            android:id="@+id/settings_cred_pin_text"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_cred_pin_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/credential_pin_text" />
        
        <Button 
            android:id="@+id/settings_change_cred_pin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/settings_cred_pin_text"
            android:text="@string/change_pin"/>

    </RelativeLayout>

</RelativeLayout>