<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/irmadarkblue"
    android:onClick="toggleFullscreen" >

    <ImageView
        android:id="@+id/waiting_mainshape"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/whiteshaperounded" />

    <ImageView
        android:id="@+id/waiting_irmaLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/irmalogo"
        android:src="@drawable/irma_logo_300" />

    <TextView
        android:id="@+id/credentialinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/statusimage"
        android:layout_below="@+id/waiting_irmaLogo"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/irmadarkblue"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/statustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/credentialinfo"
        android:layout_below="@+id/credentialinfo"
        android:gravity="center"
        android:text="@string/status_waiting_for_card"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/irmadarkblue"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/statusimage"
        android:layout_alignBottom="@+id/waiting_mainshape"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/irma_icon_place_card_520px" />

</RelativeLayout>